--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "launchdarkly/openfeature-server-sdk",
+    "name": "launchdarkly/openfeature-server",
     "description": "An OpenFeature provider for the LaunchDarkly PHP server SDK",
     "type": "library",
     "license": "Apache-2.0",
@@ -8,11 +8,32 @@
             "LaunchDarkly\\OpenFeature\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "LaunchDarkly\\Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "LaunchDarkly",
             "email": "team@launchdarkly.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=8.0",
+        "guzzlehttp/guzzle": "^7",
+        "open-feature/sdk": "^2.0",
+        "launchdarkly/server-sdk": "^5.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "phpstan/phpstan": "^1.10",
+        "friendsofphp/php-cs-fixer": "^3.16"
+    },
+    "scripts": {
+        "phpunit": "vendor/bin/phpunit",
+        "phpstan": "vendor/bin/phpstan analyse --level 8 --no-progress src tests",
+        "cs-check": "vendor/bin/php-cs-fixer fix --diff --dry-run --verbose --config=.php-cs-fixer.php",
+        "cs-fix": "vendor/bin/php-cs-fixer fix --diff --verbose --config=.php-cs-fixer.php"
+    }
 }
