--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
               parameters:
                   php-version: ["8.0", "8.1"]
                   composer-dependencies: ["lowest", "highest"]
-      - test-on-windows
+      # - test-on-windows
 
 jobs:
   test-on-windows:
