--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,8 @@
       "include-v-in-tag": false,
       "include-component-in-tag": false,
       "extra-files": [
-        ".github/actions/build-docs/action.yml"
+        ".github/actions/build-docs/action.yml",
+        "src/Provider.php",
       ]
     }
   }
