--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: [8.0, 8.1]
+        php-versions: [8.1, 8.2, 8.3]
 
     steps:
       - uses: actions/checkout@v4
@@ -32,7 +32,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [8.0.30, 8.1.26]
+        php-version: [8.1.26, 8.2.19, 8.3.8]
 
     env:
       LD_INCLUDE_INTEGRATION_TESTS: 1
