--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,7 +8,7 @@
       "include-component-in-tag": false,
       "extra-files": [
         ".github/actions/build-docs/action.yml",
-        "src/Provider.php",
+        "src/Provider.php"
       ]
     }
   }
